--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: CodeNugget
 keywords: "blog, tech, apple, mobile, dev, development, ios, web, nodejs, swift, objective-c, cocoa"
 description: > # this means to ignore newlines until "baseurl:"
   Hi. I'm Pascal. I work as a senior developer at Chefkoch.de, Europe's biggest 
-  cooking platform, and this is my personal blog. "Codenugget" is all about web and 
+  cooking platform, and this is my personal blog. 'Codenugget' is all about web and 
   mobile (iOS) development, workflow automation, interesting bits of tech news, 
   and the overall digital lifestyle.
 baseurl: "" # the subpath of your site, e.g. /blog/
